--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
+.container{
+  display: flex;
+  justify-content: center;
+  
+}
+.hero-container{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 150px;
+  height: 250px;
+  justify-content: center;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.162);
+  border-radius: 5px;
+  margin: 10px;
+}
+.h-point{
+  font-size: 40px;
+  margin: 5px;
+}
+.points{
+  height: 250px;
+  width: 150px;
+  text-align: center;
+}
+.h-img{
+  margin: 10px;
+}
 .footer{
   margin-left : 80px;
   font-size : 18px;
